Fix for nav flicker on load

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,9 @@
 /* Standard */
 
+html, body, #__nuxt {
+  width: 100%;
+}
+
 * {
   margin: 0px;
   padding: 0px;
